tests/identities/identity_d2/two_fork_err.out
error: Thread 0 (transaction 'two_fork_err') attempted to fork more than once
   ┌─ identities/identity_d2/two_fork_err.prot:10:3
   │
10 │   fork();
   │   ^^^^^^^ first fork() called here
   ·
13 │   fork();
   │   ^^^^^^^ second fork() called here

Trace 0 execution failed.
